--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %}{% endblock %}</title>
+        <link rel="icon" href="{{ asset('images/favicon.png') }}">
+        <link rel="stylesheet" href="{{ asset('styles/normalize.css') }}">
+        {% block stylesheets %}{% endblock %}
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container">
+            <header class="header">
+                <div class="header__logo">
+                    <a class="header__logo-link" href="#">
+                        <img src="{{ asset('images/logo.png') }}">
+                    </a>
+                </div>
+                <div class="header__nav-container">
+                    <nav class="header__nav">
+                        <ul class="header__nav-item list-reset">
+                            <li class="header__nav-items">
+                                <a href="#" class="header__nav-link">
+                                    Главная
+                                </a>
+                            </li>
+                            <li class="header__nav-items">
+                                <a href="#" class="header__nav-link">
+                                    Мужчины
+                                </a>
+                            </li>
+                            <li class="header__nav-items">
+                                <a href="#" class="header__nav-link">
+                                    Женщины
+                                </a>
+                            </li>
+                            <li class="header__nav-items">
+                                <a href="#" class="header__nav-link">
+                                    Новинки
+                                </a>
+                            </li>
+                            <li class="header__nav-items">
+                                <a href="#" class="header__nav-link">
+                                    Скидки
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <input type="search" placeholder="Поиск" class="header__search">
+                <div class="header__button">
+                    <ul class="header__button-items list-reset">
+                        <li class="header__button-item">
+                            <button class="header__button-like btn-reset">#</button>
+                        </li>
+                        <li class="header__button-item">
+                            <button class="header__button-account btn-reset">#</button>
+                        </li>
+                        <li class="header__button-item">
+                            <button class="header__button-basket btn-reset">#</button>
+                        </li>
+                    </ul>
+                </div>
+            </header>
+        </div>
+
+
+
+        {% block main %}{% endblock %}
     </body>
 </html>
