--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -89,10 +89,13 @@ p {
 
 /**********HEADER**********/
 
+.header {
+    border-bottom: var(--gray) solid 2px;
+}
+
 .header__container {
     height: 108px;
     padding: 30px 0;
-    border-bottom: var(--gray) solid 2px;
     display: flex;
     justify-content: space-between;
 }
@@ -292,6 +295,10 @@ p {
     color: var(--purple);
 }
 
+.footer__address {
+    font-style: normal;
+}
+
 .footer__address-item {
     padding-bottom: 40px;
     font-size: 18px;
@@ -305,4 +312,72 @@ p {
     color: var(--white);
 }
 
+/**********hero**********/
 
+.hero {
+    margin-bottom: 130px;
+}
+
+/**********Compositions**********/
+
+.compositions__container {
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.compositions__block-one, .compositions__block-two {
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 20px 0 var(--gray);
+}
+
+.compositions__img {
+    height: 100%;
+    object-fit: cover;
+}
+
+.compositions__block-content {
+    max-width: 300px;
+    position: absolute;
+    top: 65px;
+    left: 28px;
+    z-index: 10;
+}
+
+.compositions__title-one {
+    display: block;
+    margin-bottom: 25px;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--white);
+}
+
+.compositions__hero-title {
+    margin-bottom: 20px;
+    font-size: 34px;
+    font-weight: 700;
+    color: var(--white);
+}
+
+.compositions__title-two {
+    margin-bottom: 42px;
+    display: block;
+    font-size: 16px;
+    color: var(--white);
+}
+
+.compositions__block-link {
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--white);
+    cursor: pointer;
+    text-decoration: underline var(--white);
+    transition: color 0.15s ease-in-out;
+}
+
+.compositions__block-link:hover {
+    color: var(--purple);
+}
