--- a/templates/home/home_page.html.twig
+++ b/templates/home/home_page.html.twig
@@ -48,7 +48,7 @@
                     <img class="compositions__img" src="{{ asset('images/compositions/compositions_2.jpg') }}">
                     <div class="compositions__block-content">
                         <span class="compositions__title-one">
-                            Новые подаркиs
+                            Новые подарки
                         </span>
                         <h3 class="compositions__hero-title">
                             Стиль ветреннего лета
@@ -59,6 +59,107 @@
                         <a class="compositions__block-link">
                             Исследуйте предметы
                         </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="new">
+            <div class="container new__container">
+                <h2 class="new__head-title">
+                    Новинки
+                </h2>
+                <div class="swiper new__slider">
+                    <div class="swiper-wrapper new__wrapper">
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/new_card_1.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/new_card_2.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/new_card_3.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/new_card_4.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/provisional.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/provisional.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/provisional.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide new__slide">
+                            <div class="new__img-box">
+                                <a class="new__link-card" href="#">
+                                    <img class="new__img-card" src="{{ asset('images/new/provisional.jpg') }}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <a href="#" class="new__body-link">Узнать подробнее</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev new__swiper-button-prev">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.5857 7L1.58569 7M6.58569 13L1.2928 7.70711C0.902277 7.31658 0.902277 6.68342 1.2928 6.29289L6.58569 0.999999" stroke="#3C4242" stroke-width="1.6" stroke-linecap="round"/>
+                        </svg>
+                    </div>
+                    <div class="swiper-button-next new__swiper-button-next">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 7H14M9 1L14.2929 6.29289C14.6834 6.68342 14.6834 7.31658 14.2929 7.70711L9 13" stroke="#3C4242" stroke-width="1.6" stroke-linecap="round"/>
+                        </svg>
                     </div>
                 </div>
             </div>
